# NuMaker-mbed-ce-Cellular-example

./: CMakeLists.txt  README.md  main.cpp  mbed_app.json  mbed_app.json5
COMPONENT_SIM7020/: CMakeLists.txt  SIMCOM_SIM7020_Serial.cpp  mbed_lib.json5
TARGET_SIM7020/: SIMCOM_SIM7020.h  SIMCOM_SIM7020_Serial.cpp
